[metadata]
name = Cremilda
version = 0.1.0
description = A parser for the Cremilda functional programming language.
long_description = file: README.rst

author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/compiladores-fga/cremilda

keywords =
    compiler
    functional programming
license = GNU General Public License (GPL)
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0

[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    ox-parser ~= 0.2.2
    sidekick ~= 0.2.0
setup_requires =
    setuptools >= 30.3.0

[options.extras_require]
dev =
    manuel >= 1.9.0
    pytest >= 3.4.2
    pytest-cov >= 2.5.1
    coverage >= 4.4.1
    mock >= 2.0.0
    flake8 >= 3.5.0
    invoke
    fs
docs =
    docutils
    sphinx-autobuild


[egg_info]
tag_build = 0
tag_date = 0
tag_svn_revision = 0
